Debugging an issue in Order Service